feat: Implement map feature with POI management and user location
- Added use cases for retrieving Points of Interest (POIs) including all POIs, POIs in a radius, POIs by category, and searching POIs.
- Created MapNotifier to manage map state, including user location, POIs, and selected POI.
- Developed MapScreen to display an interactive map with user location and POI markers, including category filtering and POI selection.
- Introduced CategoryFilterChips widget for filtering POIs by category.
- Added PoiInfoCard widget to show details of selected POIs.
- Implemented custom POIMarker and UserLocationMarker widgets for map markers.
- Updated user management provider to use the correct base URL for API calls.
- Registered geolocator plugin for location services on macOS and Windows.
- Updated dependencies in pubspec.yaml for flutter_map, latlong2, and geolocator.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -100,6 +100,9 @@ dependencies:
   # ============================================
   freezed_annotation: ^3.1.0 # Annotations for Freezed data classes
   json_annotation: ^4.9.0 # Annotations for JSON serialization
+  flutter_map: ^8.2.2
+  latlong2: ^0.9.1
+  geolocator: ^14.0.2
 
 dev_dependencies:
   flutter_test:
